Fix SonarLint recomendations